--- a/AlexaListTrim/AlexaListTrim.csproj
+++ b/AlexaListTrim/AlexaListTrim.csproj
@@ -26,7 +26,7 @@
     <ProductName>Alexa List Trimmer</ProductName>
     <PublisherName>John Norton</PublisherName>
     <SuiteName>Alexa List Trimmer</SuiteName>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -59,7 +59,7 @@
     <ManifestKeyFile>AlexaListTrim_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>false</GenerateManifests>
+    <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
